# digit-logger

./: .gitignore  .gitmodules  LICENSE  README.md
digit-server/: Cargo.toml  Dockerfile  README.md  compose.yml
digit-server/src/: main.rs
espcam-logger/: Cargo.toml  README.md  sdkconfig.defaults
espcam-logger/src/: espcam.rs  main.rs  network.rs  sdcard.rs
