[package]
name = "digit-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = [
    "cors",
    "limit",
    "trace",
    "timeout",
] }
